--- a/PAGES/05h_inplace_functions/index.html
+++ b/PAGES/05h_inplace_functions/index.html
@@ -2979,8 +2979,8 @@ map&#33;&#40;a -&gt; a^2, output, x&#41;       # we update &#96;output&#96;</cod
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Mutations via For-Loops</h2></p>
-<p>Recall that for-loops in Julia should always be wrapped in functions. This not only prevents issues with variable scope, but also enhances performance, as we&#39;ll discuss in Part II. </p>
-<p>In this context, the ability of functions to mutate its arguments is crucial. It determines that we can initialize vectors with <code>undef</code> values, pass them to a function, and fill them through a function via a for-loop. The examples below illustrate this use.</p>
+<p>Recall that for-loops in Julia should always be wrapped in functions. This not only prevents issues with variable scope, but is also key for performance, as we&#39;ll discuss in Part II. </p>
+<p>In this context, the ability of functions to mutate its arguments is crucial. It determines that we can initialize vectors with <code>undef</code> values, pass them to a function, and fill them through a function via for-loops. The examples below illustrate this application.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3040,7 +3040,7 @@ end</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 17, 2025 
+          © Martin Alfaro <br>Last Modified March 18, 2025 
       </span> 
   </div> 
 </footer>
